Fix vertical align on user-card column

--- a/src/index.css
+++ b/src/index.css
@@ -248,7 +248,6 @@ form h2 {
 
 .user-card {
 	background-color: rgba(255,255,255,0.1);
-	height: 50%;
 	border-right: none;
 }
 
